# Chat2SQLGraph

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml
backend/application/: models.py  serializers.py  urls.py  views.py
backend/application/migrations/: 0001_initial.py  0002_applicationchatinfo.py
backend/chat/: models.py  serializers.py  urls.py  views.py
backend/chat/migrations/: 0001_initial.py  0002_alter_chatinfo_chat_content_and_more.py  0003_chatinfo_sse_message_list.py
backend/common/auth/: authenticate.py  jwt_utils.py  token_details.py
backend/common/exceptions/: exception.py
backend/common/handler/: exception_handler.py
backend/common/pipeline/: base_step.py  pipeline_manager.py  response_util.py
backend/common/providers/: base_model.py  base_model_provider.py  config.py  model_info.py  model_provider_constants.py  model_provider_info.py
backend/common/response/: field_response.py  result.py
backend/common/serializers/: custom_serializer.py
backend/common/utils/: rsa_util.py  utils.py
backend/project/: conf.py  const.py  settings.py  urls.py
backend/setting/: models.py  serializers.py  urls.py  views.py
backend/setting/migrations/: 0001_initial.py  0002_alter_model_unique_together_and_more.py  0003_alter_model_created_at_alter_model_created_by.py  0004_alter_datasource_created_by_and_more.py  0005_alter_datasource_url.py  (+2 more)
backend/user/: models.py  serializers.py  urls.py  utils.py  views.py
fronted/: next.config.js
frontend/: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml
(+50 files in other folders)
